--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TELEGRAM_BOT_TOKEN=7830205475:AAG9yt70kOTNDNy4noIll8tPv5m-WUvsEIU
-IPINFO_API_KEY=3ef880eb317956
-WHATSAPP_URL=https://wa.me/resonex
+TELEGRAM_BOT_TOKEN=
+IPINFO_API_KEY=
+WHATSAPP_URL=https://wa.me/2348158848771
