--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-TELEGRAM_BOT_TOKEN=
+TELEGRAM_BOT_TOKEN=7702991850:AAHRZ4g_Yvh_i_4THfoblQLLHpJ5RbQ8DDM
 IPINFO_API_KEY=
 WHATSAPP_URL=https://wa.me/2348158848771
